RESOLVED FIXED307876
Fix SVG length attributes to reset to defaults when removed
https://bugs.webkit.org/show_bug.cgi?id=307876
Summary Fix SVG length attributes to reset to defaults when removed
Ahmad Saleem
Reported 2026-02-13 17:39:30 PST
ssia - it is carved out from issue identified by Karl from here - https://bugs.webkit.org/show_bug.cgi?id=307677
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-13 17:39:39 PST
Ahmad Saleem
Comment 2 2026-02-13 17:49:49 PST
EWS
Comment 3 2026-02-14 12:03:54 PST
Committed 307585@main (69754ad4ec29): <https://commits.webkit.org/307585@main> Reviewed commits have been landed. Closing PR #58695 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.